feat: add pod selector for matchmaking + add admin endpoint for pods
